human_written_tests/WebAssembly/processed_control_flow_validation/test_if_23.wast
(assert_invalid
  (module (func $type-else-value-num-vs-void
    (if (i32.const 1) (then) (else (i32.const 1)))
  ))
  "type mismatch"
)